--- a/html/day1.html
+++ b/html/day1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DAY 5</title>
+    <title>DAY 1</title>
     <link href="../css/common.css" rel="stylesheet" type="text/css" />
     <link href="../css/header.css" rel="stylesheet" type="text/css" />
     <link href="../css/info.css" rel="stylesheet" type="text/css" />
@@ -14,37 +14,33 @@
         <div><a href="./about.html">ABOUT</a></div>
     </header>
     <section>
-        <div class="title">CIASS</div>
+        <div class="title">HOME DAY</div>
         <div class="item">
-            <img src="../images/DAY5/1.jpg" alt="" width="700px">
+            <img src="../images/DAY1/1.jpg" alt="" width="700px">
             <div>MONDAY</div>
         </div>
         <div class="item">
-            <img src="../images/DAY5/2.jpg" alt="" width="500px">
+            <img src="../images/DAY1/2.jpg" alt="" width="500px">
             <div>TUESDAY</div>
         </div>
         <div class="item">
-            <img src="../images/DAY5/3.jpg" alt="" width="700px">
+            <img src="../images/DAY1/3.jpg" alt="" width="700px">
             <div>WEDNESDAY</div>
         </div>
         <div class="item">
-            <img src="../images/DAY5/4.jpg" alt="" width="500px">
+            <img src="../images/DAY1/4.jpg" alt="" width="500px">
             <div>THURSDAY</div>
         </div>
         <div class="item">
-            <img src="../images/DAY5/5.jpg" alt="" width="700px">
+            <img src="../images/DAY1/5.jpg" alt="" width="700px">
             <div>FRIDAY</div>
         </div>
-        <div class="item">
-            <img src="../images/DAY5/6.jpg" alt="" width="500px">
-            <div>MONDAY</div>
-        </div>
         <div class="item goto">
-            <a href="./day6.html">
+            <a href="./day2.html">
                 <img src="../images/home/folder.png" alt="" width="100px">
-                <div>GO TO DAY6</div>
+                <div>GO TO DAY2</div>
             </a>
-
+           
         </div>
     </section>
 </body>
