--- a/html/day2.html
+++ b/html/day2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DAY 1</title>
+    <title>DAY 2</title>
     <link href="../css/common.css" rel="stylesheet" type="text/css" />
     <link href="../css/header.css" rel="stylesheet" type="text/css" />
     <link href="../css/info.css" rel="stylesheet" type="text/css" />
@@ -14,33 +14,49 @@
         <div><a href="./about.html">ABOUT</a></div>
     </header>
     <section>
-        <div class="title">HOME DAY</div>
+        <div class="title">ROUTES</div>
         <div class="item">
-            <img src="../images/DAY1/1.jpg" alt="" width="700px">
+            <img src="../images/DAY2/1.jpg" alt="" width="700px">
             <div>MONDAY</div>
         </div>
         <div class="item">
-            <img src="../images/DAY1/2.jpg" alt="" width="500px">
+            <img src="../images/DAY2/2.jpg" alt="" width="500px">
             <div>TUESDAY</div>
         </div>
         <div class="item">
-            <img src="../images/DAY1/3.jpg" alt="" width="700px">
+            <img src="../images/DAY2/3.jpg" alt="" width="700px">
             <div>WEDNESDAY</div>
         </div>
         <div class="item">
-            <img src="../images/DAY1/4.jpg" alt="" width="500px">
+            <img src="../images/DAY2/4.jpg" alt="" width="500px">
             <div>THURSDAY</div>
         </div>
         <div class="item">
-            <img src="../images/DAY1/5.jpg" alt="" width="700px">
+            <img src="../images/DAY2/5.jpg" alt="" width="700px">
             <div>FRIDAY</div>
         </div>
+        <div class="item">
+            <img src="../images/DAY2/6.jpg" alt="" width="500px">
+            <div>MONDAY</div>
+        </div>
+        <div class="item">
+            <img src="../images/DAY2/7.jpg" alt="" width="700px">
+            <div>TUESDAY</div>
+        </div>
+        <div class="item">
+            <img src="../images/DAY2/8.jpg" alt="" width="500px">
+            <div>WEDNSDAY</div>
+        </div>
+        <div class="item">
+            <img src="../images/DAY2/9.jpg" alt="" width="700px">
+            <div>THURSDAY</div>
+        </div>
         <div class="item goto">
-            <a href="./day2.html">
+            <a href="./day3.html">
                 <img src="../images/home/folder.png" alt="" width="100px">
-                <div>GO TO DAY2</div>
+                <div>GO TO DAY3</div>
             </a>
-
+           
         </div>
     </section>
 </body>
