--- a/html/day3.html
+++ b/html/day3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DAY 4</title>
+    <title>DAY 3</title>
     <link href="../css/common.css" rel="stylesheet" type="text/css" />
     <link href="../css/header.css" rel="stylesheet" type="text/css" />
     <link href="../css/info.css" rel="stylesheet" type="text/css" />
@@ -14,41 +14,41 @@
         <div><a href="./about.html">ABOUT</a></div>
     </header>
     <section>
-        <div class="title">NO ACCESS</div>
+        <div class="title">BULLSHIT</div>
         <div class="item">
-            <img src="../images/DAY4/1.jpg" alt="" width="700px">
+            <img src="../images/DAY3/1.jpg" alt="" width="700px">
             <div>MONDAY</div>
         </div>
         <div class="item">
-            <img src="../images/DAY4/2.jpg" alt="" width="500px">
-            <div>TUESDAY</div>
+            <img src="../images/DAY3/2.jpg" alt="" width="500px">
+            <div>TUSEDAY</div>
         </div>
         <div class="item">
-            <img src="../images/DAY4/3.jpg" alt="" width="700px">
+            <img src="../images/DAY3/3.jpg" alt="" width="700px">
             <div>WEDNESDAY</div>
         </div>
         <div class="item">
-            <img src="../images/DAY4/4.jpg" alt="" width="500px">
+            <img src="../images/DAY3/4.jpg" alt="" width="500px">
             <div>THURSDAY</div>
         </div>
         <div class="item">
-            <img src="../images/DAY4/5.jpg" alt="" width="700px">
+            <img src="../images/DAY3/5.jpg" alt="" width="700px">
             <div>FRIDAY</div>
         </div>
         <div class="item">
-            <img src="../images/DAY4/6.jpg" alt="" width="500px">
+            <img src="../images/DAY3/6.jpg" alt="" width="500px">
             <div>MONDAY</div>
         </div>
         <div class="item">
-            <img src="../images/DAY4/7.jpg" alt="" width="700px">
+            <img src="../images/DAY3/7.jpg" alt="" width="700px">
             <div>TUESDAY</div>
         </div>
         <div class="item goto">
-            <a href="./day5.html">
+            <a href="./day4.html">
                 <img src="../images/home/folder.png" alt="" width="100px">
-                <div>GO TO DAY5</div>
+                <div>GO TO DAY4</div>
             </a>
-
+           
         </div>
     </section>
 </body>
